assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* "*" is a universal selector */

body {
    /* more on this crazy alphanumerical value in a minute! */
    color: #39a6b2;
    font-family: Helvetica, Arial, sans-serif;
  }
  /*apply style to the <header>*/
  
  
header {padding: 20px 35px;
background-color: #39a6b2;
display:flex;
justify-content:space-between;
flex-wrap:wrap;
position: -webkit-sticky;
position: sticky;
top: 0;
background-image: url("../images/hero-bg.jpg");
background-size: cover;
background-position: 80%;
background-attachment:fixed;
}


/*removed display:inline to prepare for flexbox*/
header h1 {
    font-weight: bold;
    font-size: 36px;
    color: #fce138;
    margin: 0;
    text-shadow: 0 0 10px rgba(0,0,0,0.5);
}

header a {
    text-decoration: none;
    color: #fce138;
}
/*removed float:right to prepare for flexbox*/
header nav {
margin: 7px 0;
}

header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}

header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header nav ul li a:hover {
    background: #fce138;
    color: #024e76;
    border-radius: 15px;
    text-shadow: none;
}


div h3 {
    margin:0px;
    font-size:50px;
}

.hero-form p {
    margin: 5px 0 15px 0;
}

.intro p {
    line-height: 1.7;
    color: #39a6b2;
    width: 80%;
    font-size: 20px;
    display: inline-block;
    text-align:center;
    margin: 0 auto;
}

footer {background: #fce138;
    width: 100%;
    padding: 40px 35px;
    display:flex;
    justify-content:space-between;
    flex-wrap:wrap;
    }

footer h2 {
    color: #024e76;
    font-size: 30px;
    margin: 0;
}

footer div {
    line-height: 1.5;
    text-align: right;
}

.form-input {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
    border-radius: 10px;
    background-color: rgba(255,255,255,0.75);
}

.form-input:focus {
    background-color:rgba(255,255,255,1);
    outline: none;
}

.hero-form button {
background-color: #024e76;
color: #fce138;
padding: 5px;
border: none;
font-size: 16px;
border-radius: 10px;
}

.hero-form button:hover {
    background-color: #39a6b2;
}

.steps {
    background: #fce138;
}

.step {
    margin: 50px auto;
    padding-bottom: 50px;
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.step:not(:last-child) {
    border-bottom: 1px solid #39a6b2;
}

.step-text h4 {
    font-size: 26px;
    line-height: 1.5;
    color: #024e76;
}

.step h3 {
    color: #024e76;
    font-size: 46px;
    flex: 1 30%;
}

.step-info {
    flex: 2 70%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.step-text p {
    color: #39a6b2;
    font-size: 18px;
}

.step-img img {
    max-width: 100%;
}

.step-text {
    flex: 12;
}

.step-img {
    flex: 1 12%;
    margin-right: 20px;
}

.hero-form label {
    margin: 0 5px;
}



footer a {
color: #024e76;
}

section {
    padding: 60px;
}

/*Hero Style Start */
.hero {
    background-image: url("../images/hero-bg.jpg");
    background-size: cover;
    background-position: 80%;
    display:flex;
    justify-content: center;
    flex-wrap: wrap;
    background-attachment:fixed;
}
/*Hero style end */

.hero-cta {
    width: 35%;
    text-align: right;
    margin: 3.5%;
    color: #fff;
    font-size: 18px;
    line-height: 1.2;
    align-items: flex-start;
}

.hero-cta h2 {
    font-style: italic;
    font-size: 55px;
    color: #fce138;
    text-shadow: 0 0 10px rgba(0,0,0,0.5);
}

.hero-form {
    color:#024e76;
    background-color:rgba(252, 225, 56, 0.8);;
    padding:20px;
    border-style: solid;
    border-width: 3px;
    border-color: #024e76;
    width:40%;
    margin:3.5%;
    box-shadow: 0 0 10px rgba(0,0,0,0.5);
    border-radius: 15px;
}å

.section-title {
    font-size: 48px;
    color: #024e76;
    margin-bottom: 35px;
    padding-bottom:20px;
    text-align: center;
    margin: 0 auto 35px auto;
    width: 50%;
}

.primary-border {
    border-color: #fce138;
}

.secondary-border {
    border-color: #39a6b2;
}

.trainers {
width: 100%;
margin: 0 auto;
display: flex;
flex-wrap: wrap;
justify-content: space-around;
}

.trainer {
   /* margin: 0 auto 20px auto; */
    margin: 20px;
    background: #024e76;
    color: #fce138;
    flex: 1;
}

.trainer img {
    width: 35%;
    float: left;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.trainer-bio {
    padding: 35px;
    float: left;
    width: 65%;
    line-height: 1.3;
}

.trainer-bio h3 {
    font-size: 28px;
}

.trainer-bio h4 {
    font-weight: lighter;
    font-size: 22px;
    margin-bottom: 15px;
}

.trainer-bio p {
    font-size: 17px;
}

/*reach out styles start*/

.contact {
    background-color:#024e76;
}

.contact h2 {
    color:#fce138;
}

.contact-info {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.contact-info iframe {
    height: 400px;
  }

.contact-info div {
    color: white;
}

.contact-info h3 {
    color: #fce138;
    font-size: 32px;
}

.contact-info > * {
    flex: 1;
    margin: 15px;
}

.contact-form input, .contact-form textarea{
    border: none;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
    margin-top: 5px;
    border-radius: 10px;
    background-color: rgba(255,255,255, 0.75);
}

.contact-form input:focus, .contact-form textarea:focus {
    background-color:rgba(255,255,255,1);
    outline: none;
}

.contact-form button {
    width: 100%;
    border: none;
    background: #fce138;
    color: #024e76;
    text-align: center;
    padding: 15px 0;
    font-size: 16px;
    border-radius: 10px;
}

.contact-form button:hover {
    color: #fce138;
    background:#39a6b2;
}

.contact-info p,
.contact-info address {
    margin: 20px 0;
    line-height: 1.5;
    font-size: 16px;
    font-style: normal;
  }

  .contact-info a {
    color: #fce138;
  }

  .flex-row {
      display:flex;
  }

  /*Media Query for smaller desktop screens and smaller */
@media screen and (max-width: 980px) {
    header {
        padding-bottom: 0;
        justify-content: center;
        position: relative;
    }

    header nav ul {
        margin-top: 20px;
        width: 100%;
        justify-content: center;
    }

    footer h2, footer div {
        text-align: center;
        width: 100%;
    }

    .hero-cta, .hero-form {
        width: 100%;
    }

    .hero-cta {
        text-align: center;
    }

    .section-title{
        width: 80%;
    }

    .trainer {
        flex:0 70%;
    }

    .contact-info iframe{
        flex: 1 100%;
    }
}

/*Media query for tablets and smaller */
@media screen and (max-width: 768px) {
    section {
        padding: 30px 15px;
    }

    .step h3 {
        flex: 1 100%;
        text-align: center;
    }

    .step-info {
        flex: 2 100%;
        text-align: center;
        justify-content: center;
    }

    .step-img {
        flex: 0 32%;
        margin-right: 0;
        margin-top: 15px;
        margin-bottom: 15px;
    }

    .step-text {
        flex: 100%;
    }
}

/* Media query for mobile phones and smaller */
@media screen and (max-width: 575px) {
    .hero-form button {
        width: 100%;
    }

    .section-title {
        width: 95%;
    }

    .intro p {
        width: 100%;
    }

    .trainer {
        flex: 0 100%;
    }

    .contact-info {
        text-align: center;
    }

    .contact-info > * {
        flex: 0 100%;
    }

    .contact-form {
        order: 3;
    }
}

/*The order in which you present @media rules matters, we started with the widest value, and moved to the smallest - if we had reversed things, only the widest value would have mattered because of how CSS cascades things. The browser reads the sheet from top to bottom - lower rules override higher rules, so if we had started with the smallest screen size, the larger screen size rules would all override previous rules, ensuring that the last rule takes precedence (the 980 rule). 

Additionally, the reason these need to be at the end is because the queries that override desktop styles wouldn't be applied because desktop styles are defined later (and therefore override media queries). 

Good practice note: start by building the website for mobile, then scale it up for tablets and computers. 
*/



/* Applies 20px to every side (top, right, bottom, left) */
/* header{padding: 20px;} */
/* Applies 20px to the top and bottom, then 35px to the left and right */
/* header{padding: 20px 35px;}
/* Applies 10px to the top, 15px to the right, 20px to the bottom, 25px to the left */
/* header{padding: 10px 15px 20px 25px;} */
 /* Explicitly list the side it should be applied to*/
 /* header {                         */
  /*  padding-top: 10px;            */
 /*   padding-right: 15px;          */ 
 /*   padding-bottom: 20px;        */
 /*   padding-left: 25px;        */
 /* }*/

 /*CSS properties that allow listing multiple values at once are known as shorthand properties. These can save a ton of time and eliminate repetitive code. To learn more, refer to the MDN Web Docs on shorthand properties (Links to an external site.).*/

